# ai4se6d

./: .deploy-trigger  .dockerignore  .gitignore  .stx-deploy.json  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  book.py  docker-compose.yml  entrypoint.sh  nginx.conf  notes.txt  pyproject.toml
.claude/custom/references/: design-guideline-maximize-viewport.md  environment_flags.md  naming_convention.md  scientific-excellence.md
.github/workflows/: hetzner-deploy.yml
blocks/: bck_home.py
communication/: linkedin-post-7-days-left.md
custom/: themes.py
docs/: ce-checkpoint.md  metaphor-starred-kitchen.md
docs/collect/: 2026-04-04-training-context-analysis.md  complete-program.md  original-schedule.csv
docs/plans/: 2026-03-27-001-C-session1-plan.md  2026-04-06-001-C-gensem-plan.md  2026-04-06-002-C-gensem-plan-v2.md  2026-04-06-003-C-gensem-plan-v3.md  2026-04-14-004-C-gensem-plan-v4.md  2026-04-16-005-C-gensem-plan-v5-addendum.md
docs/proposals/: 2026-04-04-ce-task-mode.md
docs/reviews/: 2026-04-06-gensem-review.md  2026-04-06-gensem-v2-review.md  2026-04-08-kbsci-errata.md
docs/solutions/: producer-profile.md
modules/ai4se6d_collection/: CHANGELOG.md  book.py  collection.toml
modules/ai4se6d_genai_intro/: CHANGELOG.md  book.py  notes.txt
modules/ai4se6d_gensem/: CHANGELOG.md  book.py  notes.txt  setup.py
modules/ai4se6d_gensem/blocks/: __init__.py  (+185 more)
modules/ai4se6d_various/: CHANGELOG.md  book.py
modules/ai4se6d_vibecoding/: CHANGELOG.md  book.py  notes.txt  setup.py
modules/shared-blocks/: CHANGELOG.md  shared_styles.py  shared_widgets.py
(+311 files in other folders)
